# immune-inflammatory-report

./: .gitignore  III-spec.md  README.md  main.py  pyproject.toml
src/immune_inflam_index/: __init__.py  calculator.py  cli.py  constants.py  demographic_extractor.py  extractor.py  interpreter.py  pdf_parser.py  reporter.py  validator.py
tests/: __init__.py  conftest.py
tests/fixtures/: mock_data.py  pdf_generator.py
tests/integration/: test_cli.py  test_pdf_workflow.py
tests/property/: test_property_based.py
tests/unit/: test_calculator.py  test_demographic_extractor.py  test_extractor.py  test_interpreter.py  test_pdf_parser.py  test_reporter.py  test_validator.py
